@@ -17,4 +17,5 @@
   <option value="<%= AlarmLevels.CODES.getCode(AlarmLevels.CRITICAL) %>"><fmt:message key="<%= AlarmLevels.CRITICAL_DESCRIPTION %>"/></option>
   <option value="<%= AlarmLevels.CODES.getCode(AlarmLevels.LIFE_SAFETY) %>"><fmt:message key="<%= AlarmLevels.LIFE_SAFETY_DESCRIPTION %>"/></option>
   <option value="<%= AlarmLevels.CODES.getCode(AlarmLevels.DO_NOT_LOG) %>"><fmt:message key="<%= AlarmLevels.DO_NOT_LOG_DESCRIPTION %>"/></option>
+  <option value="<%= AlarmLevels.CODES.getCode(AlarmLevels.IGNORE) %>"><fmt:message key="<%= AlarmLevels.IGNORE_DESCRIPTION %>"/></option>
 </select>
